--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
       </div>
       <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
+    <!-- spinner -->
+<div  class="d-none d-flex justify-content-center ">
+      <div id="spinner" class="d-none spinner-border text-warning" role="status">
+         <span class="visually-hidden"></span>
+     </div>
+</div>
+<!-- showing error-message -->
+<h3 id="error-message"></h3>
+
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
         <h3 class="head-title text-center">Select image for create slider</h3>
@@ -36,6 +45,7 @@
 
       </div>
     </section>
+    
     <!-- slider -->
     <div class="main">
       <section class="mt-5" id="sliders">
