--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>Fancy slider Website </title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,8 @@
       </div>
       <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
-    <!-- spinner -->
+
+<!-- spinner -->
 <div  class="d-none d-flex justify-content-center ">
       <div id="spinner" class="d-none spinner-border text-warning" role="status">
          <span class="visually-hidden"></span>
